# wiz-app

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: components.rs  main.rs  server_interactions.rs
src/pages/: discover.rs  home.rs  mod.rs  page_not_found.rs
